Fix: cmake build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,95 +1,88 @@
-if (WIN32)
-    message(STATUS "OS: windows")
-else ()
-    message(STATUS "OS: not windows")
+if(WIN32)
+  message(STATUS "OS: windows")
+else()
+  message(STATUS "OS: not windows")
 endif()
 
 cmake_minimum_required(VERSION 3.11.0)
 
 set(NAME VulkanGraphicsExample)
 
-if (WIN32)
-    if ("$ENV{VK_SDK_PATH}" STREQUAL "")
-        set(VK_SDK_PATH  C:/VulkanSDK/1.3.216.0)
+if(WIN32)
+  if("$ENV{VK_SDK_PATH}" STREQUAL "")
+    set(VK_SDK_PATH C:/VulkanSDK/1.3.216.0)
+  else()
+    set(VK_SDK_PATH "$ENV{VK_SDK_PATH}")
+    file(TO_CMAKE_PATH ${VK_SDK_PATH} VK_SDK_PATH)
+  endif()
+
+  message("VK_SDK_PATH = ${VK_SDK_PATH}")
+
+  message(STATUS "using ${CMAKE_GENERATOR}")
+
+  if(CMAKE_GENERATOR STREQUAL "MinGW Makefiles")
+    if("$ENV{MINGW_PATH}" STREQUAL "")
+      set(MINGW_PATH "C:/Program\ Files/mingw-w64/x86_64-12.2.0-release-posix-seh-rt_v10-rev1/mingw64")
     else()
-        set(VK_SDK_PATH "$ENV{VK_SDK_PATH}")
-        file(TO_CMAKE_PATH ${VK_SDK_PATH} VK_SDK_PATH)
+      set(MINGW_PATH "$ENV{MINGW_PATH}")
+      file(TO_CMAKE_PATH ${MINGW_PATH} MINGW_PATH)
     endif()
-    message("VK_SDK_PATH = ${VK_SDK_PATH}")
 
-
-    message(STATUS "using ${CMAKE_GENERATOR}")
-        if (CMAKE_GENERATOR STREQUAL "MinGW Makefiles")
-        if ("$ENV{MINGW_PATH}" STREQUAL "")
-            set(MINGW_PATH "C:/Program\ Files/mingw-w64/x86_64-12.2.0-release-posix-seh-rt_v10-rev1/mingw64")
-        else()
-            set(MINGW_PATH "$ENV{MINGW_PATH}")
-            file(TO_CMAKE_PATH ${MINGW_PATH} MINGW_PATH)
-        endif()
-        message("MINGW_PATH = ${MINGW_PATH}")
-        set(USE_MINGW "True")
-        set(CMAKE_C_COMPILER ${MINGW_PATH}/bin/gcc.exe)
-        set(CMAKE_CXX_COMPILER  ${MINGW_PATH}/bin/g++.exe)
-
-
-    endif()
+    message("MINGW_PATH = ${MINGW_PATH}")
+    set(USE_MINGW "True")
+    set(CMAKE_C_COMPILER ${MINGW_PATH}/bin/gcc.exe)
+    set(CMAKE_CXX_COMPILER ${MINGW_PATH}/bin/g++.exe)
+  endif()
 endif()
 
 project(${NAME})
 
-if (DEFINED VK_SDK_PATH)
+if(DEFINED VK_SDK_PATH)
   set(Vulkan_INCLUDE_DIRS "${VK_SDK_PATH}/Include")
-  set(Vulkan_LIBRARIES "${VK_SDK_PATH}/Lib") 
+  set(Vulkan_LIBRARIES "${VK_SDK_PATH}/Lib")
   set(Vulkan_FOUND "True")
 else()
-  find_package(Vulkan REQUIRED) 
+  find_package(Vulkan REQUIRED)
   message(STATUS "Found Vulkan: $ENV{VULKAN_SDK}")
 endif()
 
-if (NOT Vulkan_FOUND)
-	message(FATAL_ERROR "Could not find Vulkan library!")
+if(NOT Vulkan_FOUND)
+  message(FATAL_ERROR "Could not find Vulkan library!")
 else()
-	message(STATUS "Using vulkan lib at: ${Vulkan_LIBRARIES}")
+  message(STATUS "Using vulkan lib at: ${Vulkan_LIBRARIES}")
 endif()
 
 include_directories(
-    ${Vulkan_INCLUDE_DIRS}
-    external
-    external/glm
-    external/glfw
-    external/Vulkan-Hpp
-    external/imgui
-    src/base
+  ${Vulkan_INCLUDE_DIRS}
+  external
+  external/glm
+  external/glfw/include
+  external/Vulkan-Hpp
+  external/imgui
+  src/base
 )
 
-
-
-
-if (USE_MINGW)
-    include_directories(${MINGW_PATH}/include)
-    link_directories(${MINGW_PATH}/lib)
+if(USE_MINGW)
+  include_directories(${MINGW_PATH}/include)
+  link_directories(${MINGW_PATH}/lib)
 endif()
 
-
+add_subdirectory(${PROJECT_SOURCE_DIR}/external/glfw)
 add_subdirectory(src/base)
 add_subdirectory(src/examples)
 
-
-
-
-
-############## Build SHADERS #######################
+# ############# Build SHADERS #######################
 
 # Find all vertex and fragment sources within shaders directory
 # taken from VBlancos vulkan tutorial
 # https://github.com/vblanco20-1/vulkan-guide/blob/all-chapters/CMakeLists.txt
-find_program(GLSL_VALIDATOR glslangValidator HINTS 
-  ${Vulkan_GLSLANG_VALIDATOR_EXECUTABLE} 
-  /usr/bin 
-  /usr/local/bin 
+find_program(GLSL_VALIDATOR glslangValidator HINTS
+  ${Vulkan_GLSLANG_VALIDATOR_EXECUTABLE}
+  /usr/bin
+  /usr/local/bin
   ${VK_SDK_PATH}/Bin
   ${VK_SDK_PATH}/Bin32
-  $ENV{VULKAN_SDK}/Bin/ 
+  $ENV{VULKAN_SDK}/Bin/
   $ENV{VULKAN_SDK}/Bin32/
 )
 
@@ -111,6 +104,6 @@ foreach(GLSL ${GLSL_SOURCE_FILES})
 endforeach(GLSL)
 
 add_custom_target(
-    Shaders
-    DEPENDS ${SPIRV_BINARY_FILES}
+  Shaders
+  DEPENDS ${SPIRV_BINARY_FILES}
 )
