--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "string": "cpp"
-    }
+        "string": "cpp",
+        "cstdint": "cpp",
+        "span": "cpp",
+        "type_traits": "cpp"
+    },
+    "C_Cpp.intelliSenseEngineFallback": "disabled"
 }
