--- a/src/base/CmakeLists.txt
+++ b/src/base/CmakeLists.txt
@@ -7,7 +7,20 @@ target_link_directories(base
     PUBLIC ${Vulkan_LIBRARIES}
 )
 
+add_library(imgui STATIC)
+file(GLOB IMGUI_SRC 
+    ${PROJECT_SOURCE_DIR}/external/imgui/*.cpp
+    ${PROJECT_SOURCE_DIR}/external/imgui/*.h
+)
+target_sources(imgui PRIVATE 
+    ${IMGUI_SRC}
+    ${PROJECT_SOURCE_DIR}/external/imgui/backends/imgui_impl_vulkan.cpp
+    ${PROJECT_SOURCE_DIR}/external/imgui/backends/imgui_impl_glfw.cpp
+)
+target_link_libraries(imgui PUBLIC vulkan-1 glfw)
+
 target_link_libraries(base
     glfw
     vulkan-1 # dynamic link? some functions raise undefined reference.
+    imgui
 )
