Add: frame per sec ui overlay

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ if(WIN32)
   message("VK_SDK_PATH = ${VK_SDK_PATH}")
 
   message(STATUS "using ${CMAKE_GENERATOR}")
+  message(STATUS "build type: ${CMAKE_BUILD_TYPE}")
+
 
   if(CMAKE_GENERATOR STREQUAL "MinGW Makefiles")
     if("$ENV{MINGW_PATH}" STREQUAL "")
