Add: command line parser external CLI11

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ endif()
 include_directories(
   ${Vulkan_INCLUDE_DIRS}
   external
+  external/CLI11
   external/glm
   external/glfw/include
   external/Vulkan-Hpp
