--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -48,15 +48,17 @@
             "description": "Select dubbuger",
             "type": "pickString",
             "options": [
+                "${env:MINGW_PATH}/bin/gdb.exe",
                 "C:/Program Files/mingw-w64/x86_64-12.2.0-release-posix-seh-rt_v10-rev1/mingw64/bin/gdb.exe",
-                "C:/Program Files/mingw-w64/x86_64-12.2.0-release-posix-seh-rt_v10-rev1/mingw64/bin/gdb.exe"
+                "C:/Program Files/mingw-w64/x86_64-13.1.0-release-posix-seh-ucrt-rt_v11-rev1/mingw64/bin/gdb.exe"
             ],
-            "default": "C:/Program Files/mingw-w64/x86_64-12.2.0-release-posix-seh-rt_v10-rev1/mingw64/bin/gdb.exe"
+            "default": "${env:MINGW_PATH}/bin/gdb.exe"
         },
         {
             "id": "cmdArgs",
-            "description": "Command line argument",
+            "description": "Command line argument, (-e to prevent \"\")",
             "type": "promptString",
+            "default": "-e",
         }
     ]
 }
