--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,6 +40,7 @@
             "type": "pickString",
             "options": [
                 "triangle",
+                "pipelines"
             ],
             "default": "triangle"
         },
