--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,6 @@ if(WIN32)
   message(STATUS "using ${CMAKE_GENERATOR}")
   message(STATUS "build type: ${CMAKE_BUILD_TYPE}")
 
-
   if(CMAKE_GENERATOR STREQUAL "MinGW Makefiles")
     if("$ENV{MINGW_PATH}" STREQUAL "")
       set(MINGW_PATH "C:/Program\ Files/mingw-w64/x86_64-12.2.0-release-posix-seh-rt_v10-rev1/mingw64")
@@ -60,12 +59,13 @@ endif()
 include_directories(
   ${Vulkan_INCLUDE_DIRS}
   external
-  external/CLI11
   external/glm
   external/glfw/include
   external/Vulkan-Hpp
-  external/imgui
   external/VulkanMemoryAllocator/include
+  external/imgui
+  external/CLI11
+  external/tinygltf
   src/base
 )
 
@@ -77,7 +77,6 @@ endif()
 add_subdirectory(${PROJECT_SOURCE_DIR}/external/glfw)
 add_subdirectory(src/base)
 add_subdirectory(src/examples)
-
 
 # ############# Build SHADERS #######################
 
