--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,7 +40,8 @@
             "type": "pickString",
             "options": [
                 "triangle",
-                "pipelines"
+                "pipelines",
+                "animation"
             ],
             "default": "triangle"
         },
