Add: ssbo staging copy and barrier

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -39,11 +39,11 @@
             "description": "Select program to debug",
             "type": "pickString",
             "options": [
-                "triangle",
+                "particle",
+                "animation",
                 "pipelines",
-                "animation"
+                "triangle",
             ],
-            "default": "triangle"
         },
         {
             "id": "pickDebugger",
