Fix: val err for not supporting dedicated queue

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -39,6 +39,7 @@
             "description": "Select program to debug",
             "type": "pickString",
             "options": [
+                "cloth",
                 "pbd",
                 "particle",
                 "animation",
