Add: geometry shader - normal debugging wip

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,6 +98,7 @@ file(GLOB_RECURSE GLSL_SOURCE_FILES
   "${PROJECT_SOURCE_DIR}/shaders/*.frag"
   "${PROJECT_SOURCE_DIR}/shaders/*.vert"
   "${PROJECT_SOURCE_DIR}/shaders/*.comp"
+  "${PROJECT_SOURCE_DIR}/shaders/*.geom"
 )
 
 foreach(GLSL ${GLSL_SOURCE_FILES})
